✨ feat: add React app scaffold, components, and CI updates
Add initial React app scaffold for the Iran Open Economy Dashboard
including package.json, public/index.html, and two new components:
MoneyCycle (Three.js demo) and SubsidyCalculator (i18n-aware form).
- package.json: declare app metadata, dependencies (react, chart.js,
  three, d3, i18next, react-i18next) and scripts for create-react-app.
- public/index.html: add basic HTML entry for React root and manifest.
- src/components/MoneyCycle.js: implement a simple Three.js rotating 
cube   mounted into a React component to seed 3D visualizations.
- - src/components/SubsidyCalculator.js: add a translated form to input 
nt   and compute a placeholder subsidy value (temporary logic).
- - .github/workflows/deploy.yml: rename job build_and_deploy and
-   consolidate steps to checkout, setup Node.js and run install/build,
-   simplifying the Actions flow to produce artifacts for deployment.
- Rationale:
- - Establish a minimal but runnable CRA-based frontend with essential
-   dependencies for charts, 3D, and i18n to accelerate feature work.
- - Provide starter components to iterate on visualizations and UI.
- Simplify CI workflow to streamline build and deploy steps.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy to docs/app
 
 on:
   push:
@@ -6,34 +6,30 @@ on:
       - main
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: './build'
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+      - name: Install dependencies and build
+        run: |
+          cd app
+          npm install
+          npm run build
+
+      - name: Deploy to docs/app
+        run: |
+          rm -rf docs/app
+          mkdir -p docs
+          mv app/build docs/app
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add docs/app
+          git commit -m 'Deploy React app to docs/app' || echo "No changes to commit"
+          git push
